Fixed spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -119,7 +119,6 @@ h1 {
   border: 2px solid #333;
   border-radius: 4px;
   padding: 20px;
-  height: 450px;
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -163,7 +162,8 @@ th, td {
 .page-container {
   display: grid;
   grid-template-columns: 37.5% 37.5% 25%;
-  margin: 30px 20px;
+  margin: 30px 20px 0px 20px;
+  height: fit-content;
 }
 
 .form-group {
